# mlir-utils

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_mlir.sh
include/: PassDetial.h  graph_matcher.h  passes.h
include/Transforms/: CMakeLists.txt  utils_passes.td
lib/: CMakeLists.txt  diff_graph.cc  graph_matcher.cc
lib/Transforms/: AutoFusion.cc  AutoFusion.cpp  CMakeLists.txt  DenseCSE.cpp  Fusion.cpp
test/: resnet50.mlir
tools/: CMakeLists.txt
tools/utils-opt/: CMakeLists.txt  utils-opt.cpp
